--- a/.github/workflows/build-qt-5.15.yml
+++ b/.github/workflows/build-qt-5.15.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v4.2.2
 
       - name: Set up Visual Studio Developer Command Prompt
+        shell: cmd
         run: |
           call "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvarsall.bat" x64
 
