--- a/.github/workflows/build-qt-5.15.yml
+++ b/.github/workflows/build-qt-5.15.yml
@@ -15,6 +15,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
 
+      - name: Install Ninja
+        run: |
+          choco install ninja
+
       - name: Download Qt ${{ env.qt_version }} sources
         run: .\download_sources.cmd repack ${{ env.qt_version }} ${{ env.openssl_version }}
 
