--- a/.github/workflows/build-qt-5.15.yml
+++ b/.github/workflows/build-qt-5.15.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   qt_version: 5.15.17
-  openssl_version: 3.4.1
+  openssl_version: 3.5.0
 
 jobs:
   Build_x64:
@@ -19,7 +19,7 @@ jobs:
         run: .\download_sources.cmd repack ${{ env.qt_version }} ${{ env.openssl_version }}
 
       - name: Upload patched Qt ${{ env.qt_version }} sources
-        uses: actions/upload-artifact@v4.4.3
+        uses: actions/upload-artifact@v4.6.2
         with:
           name: Qt ${{ env.qt_version }} patched src
           path: |
@@ -34,7 +34,7 @@ jobs:
         run: .\build_sources.cmd x64 ${{ env.qt_version }}
 
       - name: Upload built Qt ${{ env.qt_version }}
-        uses: actions/upload-artifact@v4.4.3
+        uses: actions/upload-artifact@v4.6.2
         with:
           name: Qt ${{ env.qt_version }} x64
           path: |
@@ -42,9 +42,9 @@ jobs:
           compression-level: 0
 
       - name: Upload built OpenSSL ${{ env.openssl_version }}
-        uses: actions/upload-artifact@v4.4.3
+        uses: actions/upload-artifact@v4.6.2
         with:
-          name: OpenSSL ${{ env.qt_version }} x64
+          name: OpenSSL ${{ env.openssl_version }} x64
           path: |
             openssl-win64/bin/*.dll
             openssl-win64/bin/*.exe
@@ -68,7 +68,7 @@ jobs:
         run: .\build_sources.cmd Win32 ${{ env.qt_version }}
 
       - name: Upload built Qt
-        uses: actions/upload-artifact@v4.4.3
+        uses: actions/upload-artifact@v4.6.2
         with:
           name: Qt ${{ env.qt_version }} x86
           path: |
@@ -76,9 +76,9 @@ jobs:
           compression-level: 0
 
       - name: Upload built OpenSSL ${{ env.openssl_version }}
-        uses: actions/upload-artifact@v4.4.3
+        uses: actions/upload-artifact@v4.6.2
         with:
-          name: OpenSSL ${{ env.qt_version }} x86
+          name: OpenSSL ${{ env.openssl_version }} x86
           path: |
             openssl-win32/bin/*.dll
             openssl-win32/bin/*.exe
